Fixed some bugs with div overflow and arranged tags alphabetically

--- a/public/stylesheets/slidepanel/style.css
+++ b/public/stylesheets/slidepanel/style.css
@@ -1,7 +1,8 @@
 /* aash1010 */
 body
 {
-	overflow: hidden;
+	/*overflow: hidden;*/
+    overflow-y:scroll;
 }
 #slide-panel {
     width:300px;
@@ -19,7 +20,7 @@ body
 }
 #content
 {
-    height: 500px;
+    height: auto;
     width: 100%;
     float: left;
 	padding-left: 5%;
